--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <title>random_user</title>
 </head>
 <body>
-    <section>
-        <image id="immagine"></image>
-        <h2 id="nome"></h2>
-        <p id="info"></p>
+    <section class="profilo">
+        <image id="immagine" class="image"></image>
+        <h2 id="nome" class="anton-regular"></h2>
+        <p id="fisso" class="ubuntu-regular"></p>
+        <p id="mobile" class="ubuntu-regular"></p>
+        <p id="mail" class="ubuntu-regular"></p>
     </section>
-    <section>
-        <p id="descrizione"></p>
+    <section class="dettagli">
+        <p id="dettagli" class="anton-regular"></p>
+        <p id="nascita" class="ubuntu-regular"></p>
+        <p id="eta" class="ubuntu-regular"></p>
+        <p id="ubicazione" class="ubuntu-regular"></p>
+        <p id="indirizzo" class="ubuntu-regular"></p>
     </section>
     <script type="text/javascript" src="static/js/index.js"></script>
 </body>
